fixed box alignments

--- a/template.css
+++ b/template.css
@@ -392,7 +392,7 @@ ul#gallery img {
 .person-picture {
     float: left;
     margin: 10px;
-    width: 210px;
+    width: 205px;
     text-align: center;
 }
 .person-picture img {
